--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -50,6 +50,10 @@
     .text {
         width: 40%;
     }
+    .color_menu{
+        background-color: #343a40;
+
+    }
 
 </style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
