--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -20,7 +20,7 @@
 
                         {% endif %}
 
-                        <ul style="text-align: center" class="dropdown-menu dropdown-menu-dark"
+                        <ul style="text-align: center" class="dropdown-menu dropdown-menu-dark color_menu"
                             aria-labelledby="dropdownMenuLink">
                             {% if item.position == "in"  %}
                             <li style="display: flex"><a class="dropdown-item"
