--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -144,7 +144,7 @@
 						</p>
 						<p style="font-size: small;">Забыли пароль? <a href="{% url 'password_reset' %}">востановите
 								его</a></p>
-						<h7>Еще нет аккаунта? <a href="../signin.html">создай его</a></h7>
+						<h7>Еще нет аккаунта? <a href="/signin">создай его</a></h7>
 					</div>
 					<div style="overflow: auto;" id="nextprevious">
 						<div style="float: right;">
