--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -1,140 +1,181 @@
 <!doctype html>
 <html>
+
 <head>
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>Snippet - BBBootstrap</title>
-        <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
-        <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-        <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<style>
-body {
-	background: #eee
-}
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<title>Snippet - BBBootstrap</title>
+	<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
+	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<style>
+		body {
+			background: #eee
+		}
 
-#regForm {
-	background-color: #ffffff;
-	margin: 0px auto;
-	font-family: Raleway;
-	padding: 40px;
-	border-radius: 10px
-}
+		#regForm {
+			background-color: #ffffff;
+			margin: 0px auto;
+			font-family: Raleway;
+			padding: 40px;
+			border-radius: 10px
+		}
 
-#register {
-	color: #6A1B9A
-}
+		#register {
+			color: #6A1B9A
+		}
 
-h1 {
-	text-align: center
-}
+		h1 {
+			text-align: center
+		}
 
-input {
-	padding: 10px;
-	width: 100%;
-	font-size: 17px;
-	font-family: Raleway;
-	border: 1px solid #aaaaaa;
-	border-radius: 10px;
-	-webkit-appearance: none
-}
+		input {
+			padding: 10px;
+			width: 100%;
+			font-size: 17px;
+			font-family: Raleway;
+			border: 1px solid #aaaaaa;
+			border-radius: 10px;
+			-webkit-appearance: none
+		}
 
-.tab input:focus {
-	border: 1px solid #6a1b9a !important;
-	outline: none
-}
+		.tab input:focus {
+			border: 1px solid #6a1b9a !important;
+			outline: none
+		}
 
-input.invalid {
-	border: 1px solid #e03a0666
-}
+		input.invalid {
+			border: 1px solid #e03a0666
+		}
 
-.tab {
-	display: none
-}
+		.tab {
+			display: none
+		}
 
-button {
-	background-color: #6A1B9A;
-	color: #ffffff;
-	border: none;
-	border-radius: 50%;
-	padding: 10px 20px;
-	font-size: 17px;
-	font-family: Raleway;
-	cursor: pointer
-}
+		button {
+			background-color: #6A1B9A;
+			color: #ffffff;
+			border: none;
+			border-radius: 50%;
+			padding: 10px 20px;
+			font-size: 17px;
+			font-family: Raleway;
+			cursor: pointer
+		}
 
-button:hover {
-	opacity: 0.8
-}
+		button:hover {
+			opacity: 0.8
+		}
 
-button:focus {
-	outline: none !important
-}
+		button:focus {
+			outline: none !important
+		}
 
-#prevBtn {
-	background-color: #bbbbbb
-}
+		#prevBtn {
+			background-color: #bbbbbb
+		}
 
-.all-steps {
-	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	width: 100%;
-	display: inline-flex;
-	justify-content: center
-}
+		.all-steps {
+			text-align: center;
+			margin-top: 30px;
+			margin-bottom: 30px;
+			width: 100%;
+			display: inline-flex;
+			justify-content: center
+		}
 
-.step {
-	height: 40px;
-	width: 40px;
-	margin: 0 2px;
-	background-color: #bbbbbb;
-	border: none;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 15px;
-	color: #6a1b9a;
-	opacity: 0.5
-}
+		.step {
+			height: 40px;
+			width: 40px;
+			margin: 0 2px;
+			background-color: #bbbbbb;
+			border: none;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 15px;
+			color: #6a1b9a;
+			opacity: 0.5
+		}
 
-.step.active {
-	opacity: 1
-}
+		.step.active {
+			opacity: 1
+		}
 
-.step.finish {
-	color: #fff;
-	background: #6a1b9a;
-	opacity: 1
-}
+		.step.finish {
+			color: #fff;
+			background: #6a1b9a;
+			opacity: 1
+		}
 
-.all-steps {
-	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 30px
-}
+		.all-steps {
+			text-align: center;
+			margin-top: 30px;
+			margin-bottom: 30px
+		}
 
-.thanks-message {
-	display: none
-}
-</style>
+		.thanks-message {
+			display: none
+		}
+	</style>
 </head>
+
 <body oncontextmenu='return false' class='snippet-body'>
-   <div class="container mt-5">
-      <div class="row d-flex justify-content-center align-items-center">
-         <div class="col-md-8">
-            <form method="POST">
-                {{ user_form.as_p }}
-                {% csrf_token %}
-                <p><input type="submit" value="Create my account"></p>
-            </form>
-         </div>
-      </div>
-   </div>
+	<div class="container mt-5">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-md-8">
+				<form id="regForm" method="POST">
+					<h1 id="register">Signin Form</h1>
+					<div class="all-steps" id="all-steps">
+						<a onclick="surTab(0)"> 
+							<span class="step">
+							<i class="fa fa-user"></i>
+						</span>
+						</a>
+						<a onclick="surTab(1)"> 
+							<span class="step">
+							<i class="fa fa-unlock-alt"></i>
+						</span>
+						</a>
+						<a onclick="surTab(2)"> 
+							<span class="step">
+							<i class="fa fa-map-marker"></i>
+						</span>
+						</a>
+						<a onclick="surTab(3)"> 
+							<span class="step">
+							<i class="fa fa-envelope"></i>
+						</span>
+						</a>
+					</div>
+					<div class="tab">
+						<p>
+							{{ user_form.as_p }}
+							{% csrf_token %}
+						</p>
+					</div>
+
+					<div style="overflow:auto;" id="next-previous">
+						<div style="float:right;">
+							<button type="button" id="prevBtn" onclick="nextPrev(-1)">
+							  <i class="fa fa-angle-double-left"></i>
+							</button>
+							  {% comment %} {% csrf_token %} {% endcomment %}
+							<button type="button" id="nextBtn" onclick="nextPrev(1)">
+							  <i class="fa fa-angle-double-right"></i>
+							</button>
+						</div>
+					 </div>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
-<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
+<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
+</script>
 <script type='text/Javascript'>
-let currentTab = 0;
+	let currentTab = 0;
 document.addEventListener("DOMContentLoaded", function (event) {
 
 
@@ -212,4 +253,5 @@ function fixStepIndicator(n) {
 	x[n].className += " active";
 }
 </script>
+
 </html>
