added safe templa switcher

--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -162,7 +162,7 @@
 							  <i class="fa fa-angle-double-left"></i>
 							</button>
 							  {% comment %} {% csrf_token %} {% endcomment %}
-							<button type="button" id="nextBtn" onclick="nextPrev(1)">
+							<button type="submit" id="nextBtn" onclick="nextPrev(1)">
 							  <i class="fa fa-angle-double-right"></i>
 							</button>
 						</div>
