--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -128,68 +128,87 @@
 				<form id="regForm" method="POST">
 					<h1 id="register">Signin Form</h1>
 					<div class="all-steps" id="all-steps">
-						<a onclick="surTab(0)"> 
+						<a onclick="surTab(0)">
 							<span class="step">
-							<i class="fa fa-user"></i>
-						</span>
+								<i class="fa fa-user"></i>
+							</span>
 						</a>
-						<a onclick="surTab(1)"> 
+						<a onclick="surTab(1)">
 							<span class="step">
-							<i class="fa fa-unlock-alt"></i>
-						</span>
+								<i class="fa fa-unlock-alt"></i>
+							</span>
 						</a>
-						<a onclick="surTab(2)"> 
+						<a onclick="surTab(2)">
 							<span class="step">
-							<i class="fa fa-map-marker"></i>
-						</span>
+								<i class="fa fa-map-marker"></i>
+							</span>
 						</a>
-						<a onclick="surTab(3)"> 
+						<a onclick="surTab(3)">
 							<span class="step">
-							<i class="fa fa-envelope"></i>
-						</span>
+								<i class="fa fa-envelope"></i>
+							</span>
 						</a>
 					</div>
 					<div class="tab">
-						<p>
-							{{ user_form.as_p }}
-							{% csrf_token %}
-						</p>
+						{{ user_form.name }}
+						<br>
+						<br>
+						{{ user_form.surname }}
+						<br>
+						<br>
 					</div>
-
+					<div class="tab">
+						{{ user_form.username }}
+						<br>
+						<br>
+						{{ user_form.password }}
+						<br>
+						<br>
+						{{ user_form.password2 }}
+						<br>
+						<br>
+					</div>
+					<div class="tab">
+						{{ user_form.city }}
+						<br>
+						<br>
+					</div>
+					<div class="tab">
+						{{ user_form.phone }}
+						<br>
+						<br>
+						{{ user_form.email }}
+						<br>
+						<br>
+					</div>
+					{% csrf_token %}
 					<div style="overflow:auto;" id="next-previous">
 						<div style="float:right;">
 							<button type="button" id="prevBtn" onclick="nextPrev(-1)">
-							  <i class="fa fa-angle-double-left"></i>
+								<i class="fa fa-angle-double-left"></i>
 							</button>
-							  {% comment %} {% csrf_token %} {% endcomment %}
-							<button type="submit" id="nextBtn" onclick="nextPrev(1)">
-							  <i class="fa fa-angle-double-right"></i>
+							<button type="button" id="nextBtn" onclick="nextPrev(1)">
+								<i class="fa fa-angle-double-right"></i>
 							</button>
 						</div>
-					 </div>
+					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 </body>
-<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
-</script>
+<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
 <script type='text/Javascript'>
-	let currentTab = 0;
+let currentTab = 0;
 document.addEventListener("DOMContentLoaded", function (event) {
-
-
 	showTab(currentTab);
-
 });
 
 function showTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[n].style.display = "block";
+	let x = document.getElementsByClassName("tab");
+	x[n].style.display = "block";
 	if (n === 0) {
 		document.getElementById("prevBtn").style.display = "none";
-        document.getElementById("password").value = '';
-        document.getElementById("sug_password").value = '';
 	} else {
 		document.getElementById("prevBtn").style.display = "inline";
 	}
@@ -204,12 +223,11 @@ function showTab(n) {
 function nextPrev(n) {
 	let x = document.getElementsByClassName("tab");
 
-	if (n === 1 && !validateForm()) return false;
 	x[currentTab].style.display = "none";
 	currentTab = currentTab + n;
 	if (currentTab === x.length) {
-        document.getElementById('nextBtn').type = "submit"
-        window.location='../';
+		document.getElementById('nextBtn').type = "submit"
+		window.location='../login';
 	}
 	showTab(currentTab);
 }
@@ -222,32 +240,9 @@ function surTab(n) {
 	showTab(currentTab);
 }
 
-function validateForm() {
-    let x, y, i, p1, p2, valid = true;
-    x = document.getElementsByClassName("tab");
-	y = x[currentTab].getElementsByTagName("input");
-    p1 = document.getElementById("password").value;
-    p2 = document.getElementById("sug_password").value;
-	for (i = 0; i < y.length; i++) {
-		if (y[i].value === "") {
-			y[i].className += " invalid";
-			valid = false;
-		}
-	}
-    if(p1 !== p2){
-        alert("Пароли не совпадают")
-        valid = false;
-    }
-	if (valid) {
-		document.getElementsByClassName("step")[currentTab].className += " finish";
-	}
-
-	return valid;
-}
-
 function fixStepIndicator(n) {
-    let i, x = document.getElementsByClassName("step");
-    for (i = 0; i < x.length; i++) {
+	let i, x = document.getElementsByClassName("step");
+	for (i = 0; i < x.length; i++) {
 		x[i].className = x[i].className.replace(" active", "");
 	}
 	x[n].className += " active";
