--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -1,11 +1,12 @@
-
-<figure class="snip1418"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample85.jpg" alt="sample85"/>
-  <div class="add-to-cart"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
-  <figcaption>
-    <h3>Pudol Doux</h3>
-    <p>All this modern technology just makes people try to do everything at once.</p>
-    <div class="price">
-      <s>$24.00</s>$19.00
-    </div>
-  </figcaption><a href="#"></a>
-</figure>
+{%for product in products%}
+  <figure class="snip1418"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample85.jpg" alt="sample85"/>
+    <div class="add-to-cart"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
+    <figcaption>
+      <h3>{{product.product_name}}</h3>
+      <p>{{product.availability}}</p>
+      <div class="price">
+        {{product.cost}}
+      </div>
+    </figcaption><a href="#"></a>
+  </figure>
+{% endfor %}
