--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -5,7 +5,7 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://avatars.mds.yandex.net/get-adfox-content/2788782/220215_market_1735978_5033274_4.e62f054883f43bd74800700de5ae7263.png/optimize.webp" class="d-block w-100" alt="...">
+      <img src="https://avatars.mds.yandex.net/get-adfox-content/2462621/220304_market_1833365_5072910_4.2f14d0e42887e6ee8256403315d77d00.jpg/optimize.webp" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
