--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,57 +1,77 @@
-<div class="row k" id="WindowCreateTask2">
-    <div class="col-md-1">
-      <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
+<div class="row">
+  <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
+    <h4 class="text-right">Профиль</h4>
+  </div>
+  <div class="col-md-3 border-right">
+    <div class="d-flex flex-column align-items-center text-center py-5">
+      <img class="rounded-circle mt-5" width="150px"
+        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+      <span class="font-weight-bold">тут будет имя
+      </span>
+      <span class="text-black-50">тут будет почта</span>
+      <span> </span>
     </div>
-    <div id="main_change" class="col-md-10">
+  </div>
+
+  <div id="main_change" class="col-md-8 ml-3">
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+
       <div class="p-3 py-5">
-        <div class="d-flex justify-content-center align-items-center mb-3">
-          <h4 class="text-right">Создать</h4>
+
+        <div class="row mt-3">
+          <div class="col-md-9">
+            <h1 class="labels">Изображения</h1>
+            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
+            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+    
+            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
+            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+
+            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
+            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+
+          </div>
+        </div>
+        <br>
+
+        <div class="row mt-3 mb-3">
+          <div class="col-md-12">
+            <h1 class="labels">Расскажите о себе</h1>
+            <textarea name="descr" class="form-control"></textarea>
+          </div>
         </div>
 
-        <div class="row mt-12">
-          <div class="col-md-3">
-            <div class="input-group mb-3">
-              <span class="input-group-text">₽</span>
-              <input type="number" placeholder="Стоимость заказа" class="form-control">
-              <span class="input-group-text">.00</span>
-            </div>
-          </div>
+        <div class="row mt-5 d-flex align-items-center">
           <div class="col-md-5">
             <div class="input-group mb-7">
               <div class="input-group-prepend">
-                <label class="input-group-text" for="inputGroupSelect01">Срок выполнения</label>
+                <label class="input-group-text" for="inputGroupSelect01">Вид деятельности</label>
               </div>
               <select class="custom-select" id="inputGroupSelect01">
                 <option selected>Выбрать</option>
-                <option value="1">1 день</option>
-                <option value="2">2 - 5 дней</option>
-                <option value="3">5 - 10 дней</option>
-                <option value="4">2 - 3 недели</option>
-                <option value="5">месяц</option>
-                <option value="6">2 - 5 месяцев</option>
-                <option value="7">более полугода</option>
+                <option value="1">option</option>
+                <option value="2">option</option>
+                <option value="3">option</option>
+                <option value="4">option</option>
+                <option value="5">option</option>
+                <option value="6">option</option>
+                <option value="7">option</option>
               </select>
             </div>
           </div>
-        </div>
-
-        <div class="row mt-3">
-          <div class="col-md-9">
-            <label class="labels">Расскажите о заказе</label>
-            <textarea class="form-control"></textarea>
-          </div>
-        </div>
-
-        <div class="row mt-3">
-          <div class="col-md-9">
-            <label class="labels">Дополнительная информация</label>
-            <input id="fileupload" class="form-control" name="myfile" type="file" multiple />
+          <div class="col-md-5">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+              <label class="form-check-label" for="flexSwitchCheckDefault">Вы являетесь компанией?</label>
+            </div>
           </div>
         </div>
 
         <div class="mt-5 text-center">
-          <button class="btn btn-primary profile-button" type="submit">Опубликовать</button>
+          <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
         </div>
       </div>
-    </div>
+    </form>
   </div>
+</div>
