--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -167,6 +167,21 @@
       }
       xhr.send()
     });
+
+    $('#addBtn_4').on('click', {
+      title: 'Заголовок 1',
+      content: 'Содержимое 1...'
+    }, function (inBody) {
+
+      var xhr = new XMLHttpRequest()
+      xhr.open('GET', 'becomeCreatorTemplates/4/')
+      xhr.onload = function () {
+
+        $('#MainWindowContainer').html(xhr.response)
+      }
+      xhr.send()
+    });
+
   </script>
 </body>
 {% endblock %}
