--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -68,6 +68,13 @@
           </div>
         </div>
 
+        <div class="row mt-3 mb-3">
+          <div class="col-md-8">
+            <label class="labels">Загрузить фото</label>
+            <input id="fileupload" class="form-control" name="myfile" type="file" />
+          </div>
+        </div>
+
         <div class="mt-5 text-center">
           <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
         </div>
