--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -65,8 +65,9 @@
         <div class="row">
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-{#                    <img class="rounded-circle mt-5" width="150px" src="{ imgPath }">#}
+                    <img class="rounded-circle mt-5" width="150px"
+                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                    {#                    <img class="rounded-circle mt-5" width="150px" src="{ imgPath }">#}
                     <span class="font-weight-bold">тут будет имя
                     </span>
                     <span class="text-black-50">тут будет почта</span>
@@ -77,10 +78,6 @@
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Настройки профиля</h4>
-                        {% comment %} <div class="form-check form-switch"> {% endcomment %}
-                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label> {% endcomment %}
-                            {% comment %} <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
-                          {% comment %} </div> {% endcomment %}
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-6">
@@ -150,16 +147,17 @@
     <script type='text/Javascript'></script>
 </body>
 <script>
-    function isCreator(){
+    function isCreator() {
 
-        if (!document.getElementById('creatorSwitcher').checked){
+        if (!document.getElementById('creatorSwitcher').checked) {
             document.getElementById('creator').style.display = 'none';
             document.getElementById('main_change').className = ('col-md-8');
-        } else{
+        } else {
             document.getElementById('main_change').className = ('col-md-5 border-right');
             document.getElementById('creator').style.display = 'inline-block';
         }
     }
 </script>
+
 </html>
 {% endblock %}
