--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -23,13 +23,13 @@
           <div class="col-md-9">
             <h1 class="labels">Изображения</h1>
             <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-    
-            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
 
             <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
-            src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+
+            <img class="rounded mt-5 border-right mr-2 ml-2 p-3" width="150px"
+              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
 
           </div>
         </div>
@@ -42,29 +42,34 @@
           </div>
         </div>
 
-        <div class="row mt-5 d-flex align-items-center">
-          <div class="col-md-5">
-            <div class="input-group mb-7">
-              <div class="input-group-prepend">
-                <label class="input-group-text" for="inputGroupSelect01">Вид деятельности</label>
-              </div>
-              <select class="custom-select" id="inputGroupSelect01">
-                <option selected>Выбрать</option>
-                <option value="1">option</option>
-                <option value="2">option</option>
-                <option value="3">option</option>
-                <option value="4">option</option>
-                <option value="5">option</option>
-                <option value="6">option</option>
-                <option value="7">option</option>
-              </select>
+        <div class="row mt-3">
+          <div class="input-group mb-7">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Вид деятельности</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect01">
+              <option selected>Выбрать</option>
+              <option value="1">option</option>
+              <option value="2">option</option>
+              <option value="3">option</option>
+              <option value="4">option</option>
+              <option value="5">option</option>
+              <option value="6">option</option>
+              <option value="7">option</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row mt-3 d-flex align-items-center">
+          <div class="col-md-6">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" onchange="isCompany()" id="isCompanyTrigger">
+              <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>
             </div>
           </div>
-          <div class="col-md-5">
-            <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-              <label class="form-check-label" for="flexSwitchCheckDefault">Вы являетесь компанией?</label>
-            </div>
+          <div class="col-md-6" id="companyTriggerOn" style="display: none;">
+            <label class="labels">Название компании</label>
+            <input type="text" class="form-control" placeholder="Город" value="">
           </div>
         </div>
 
@@ -82,3 +87,12 @@
     </form>
   </div>
 </div>
+<script>
+  function isCompany(){
+    if (document.getElementById('isCompanyTrigger').checked){
+      document.getElementById('companyTriggerOn').style.display = "flex";
+    } else{
+      document.getElementById('companyTriggerOn').style.display = "none";
+    }
+  }
+</script>
