--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -48,8 +48,7 @@
               <label class="input-group-text" for="inputGroupSelect01">Вид деятельности</label>
             </div>
             <select class="custom-select" id="inputGroupSelect01">
-              <option selected>Выбрать</option>
-              <option value="1">option</option>
+              <option value="1" selected>option</option>
               <option value="2">option</option>
               <option value="3">option</option>
               <option value="4">option</option>
@@ -63,7 +62,7 @@
         <div class="row mt-3 d-flex align-items-center">
           <div class="col-md-6">
             <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" onchange="isCompany()" id="isCompanyTrigger">
+              <input class="form-check-input" type="checkbox" name="iscompany" onchange="isCompany()" id="isCompanyTrigger">
               <label class="form-check-label" for="isCompanyTrigger">Вы являетесь компанией?</label>
             </div>
           </div>
@@ -76,7 +75,7 @@
         <div class="row mt-3 mb-3">
           <div class="col-md-8">
             <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control" name="myfile" type="file" />
+            <input id="fileupload" class="form-control" name="images_for_creator" type="file" />
           </div>
         </div>
 
