--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -5,7 +5,7 @@
 <head>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+  <title>BizOpt</title>
   <div id="carouselExampleSlidesOnly" class="carousel slide smallPad" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
