--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -10,38 +10,39 @@
 
       <div class="row mt-2">
         <div class="col-md-6">
-          <label class="labels">Название</label>
-          <input type="text" class="form-control" placeholder="Название товара" value="">
-        </div>
-        <div class="col-md-6">
           <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
+            <div class="col-md-6">
+                <label class="labels">Название</label>
+                <input type="text" name="product_name" class="form-control" placeholder="Название товара" value="">
+            </div>
             <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control" name="myfile" type="file" multiple/>
+            <input id="fileupload" class="form-control" name="product_photos" type="file" multiple/>
+            <div class="row mt-3">
+                <div class="col-md-9">
+                    <label class="labels">Описание товара</label>
+                    <textarea name="product_description" class="form-control"></textarea>
+                </div>
+            </div>
+            <br>
+            <div class="row mt-3">
+                <div class="col-md-2">
+                    <label class="labels">Цена</label>
+                    <div class="input-group mb-3">
+                        <input type="number" name="product_cost" class="form-control" style="text-align: right;" multiple>
+                        <span class="input-group-text">.00 ₽</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-5 text-center">
+                <button name="product_creator" class="btn btn-primary profile-button" type="submit">Создать</button>
+            </div>
           </form>
         </div>
       </div>
 
-      <div class="row mt-3">
-        <div class="col-md-9">
-          <label class="labels">Описание товара</label>
-          <textarea class="form-control"></textarea>
-        </div>
-      </div>
-      <br>
-      <div class="row mt-3">
-        <div class="col-md-2">
-          <label class="labels">Цена</label>
-          <div class="input-group mb-3">
-            <input type="number" class="form-control" style="text-align: right;">
-            <span class="input-group-text">.00 ₽</span>
-          </div>
-        </div>
-      </div>
 
-        <div class="mt-5 text-center">
-          <button class="btn btn-primary profile-button" type="submit">Создать</button>
-        </div>
       </div>
     </div>
   </div>
