отрисовка резюме и товаров в размеде СОЗДАТЕЛИ

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -3,7 +3,7 @@
     <div class="add-to-cart"> <i class="ion-android-add"></i><span>Add to Cart</span></div>
     <figcaption>
       <h3>{{product.product_name}}</h3>
-      <p>{{product.availability}}</p>
+{#      <p>{{product.availability}}</p>#}
       <div class="price">
         {{product.cost}}
       </div>
