--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -8,9 +8,9 @@
     <div class="d-flex flex-column align-items-center text-center py-5">
       <img class="rounded-circle mt-5" width="150px"
         src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-      <span class="font-weight-bold">тут будет имя
+      <span class="font-weight-bold">{{ first_name }}
       </span>
-      <span class="text-black-50">тут будет почта</span>
+      <span class="text-black-50">{{ email }}</span>
       <span> </span>
     </div>
   </div>
