--- a/bizopt/BO/templates/editProfile.html
+++ b/bizopt/BO/templates/editProfile.html
@@ -84,29 +84,21 @@
                         <div class="row mt-2">
                             <div class="col-md-6">
                                 <label class="labels">Имя</label>
-                                <input type="text" class="form-control" placeholder="имя" value=""></div>
+                                <input type="text" name="first_name" class="form-control" id="first_name" placeholder="имя" value="{{user.first_name}}"></div>
                             <div class="col-md-6">
                                 <label class="labels">Фамилия</label>
-                                <input type="text" class="form-control" value="" placeholder="Фамилия"></div>
+                                <input type="text" name="last_name" class="form-control" id="last_name" value="{{user.last_name}}" placeholder="Фамилия"></div>
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-12">
                                 <label class="labels">Номер телефона</label>
-                                <input type="text" class="form-control" placeholder="Номер телефона" value=""></div>
+                                <input type="text" name="phone" class="form-control" id="phone" placeholder="Номер телефона" value="{{user.phone}}"></div>
                             <div class="col-md-12">
                                 <label class="labels">Город</label>
-                                <input type="text" class="form-control" placeholder="Город" value=""></div>
+                                <input type="text" name="city" class="form-control" id="city" placeholder="Город" value="{{user.city}}"></div>
                             <div class="col-md-12">
                                 <label class="labels">Почта</label>
-                                <input type="text" class="form-control" placeholder="Почта" value=""></div>
-                        </div>
-                        <div class="row mt-3">
-                            <div class="col-md-6">
-                                <label class="labels">Страна</label>
-                                <input type="text" class="form-control" placeholder="Страна" value=""></div>
-                            <div class="col-md-6">
-                                <label class="labels">Город/Регион</label>
-                                <input type="text" class="form-control" value="" placeholder="Город"></div>
+                                <input type="text" class="form-control" id="email" placeholder="Почта" value="{{user.email}}"></div>
                         </div>
 
                             <div class="row mt-3">
