--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,5 +1,3 @@
-<form method="POST" >
-
 <div class="row">
   <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
     <h4 class="text-right">Профиль</h4>
@@ -67,7 +65,7 @@
         <div class="row mt-3 mb-3">
           <div class="col-md-8">
             <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control" name="profile_images" type="file" multiple/>
+            <input id="fileupload" class="form-control" name="profile_images" type="file"/>
           </div>
         </div>
 
@@ -88,6 +86,3 @@
     }
   }
 </script>
-
-
-</form>
