--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,4 +1,4 @@
-<form method="POST">
+{#<form method="POST">#}
 
 <div class="row">
   <div class="col-md-1">
@@ -19,7 +19,8 @@
                 <input type="text" name="product_name" class="form-control" placeholder="Название товара" value="">
             </div>
             <label class="labels">Загрузить фото</label>
-            <input id="fileupload" class="form-control" name="product_photos" type="file" multiple/>
+            <input id="fileupload" class="form-control"
+                   name="product_photos" type="file" />
             <div class="row mt-3">
                 <div class="col-md-9">
                     <label class="labels">Описание товара</label>
@@ -49,4 +50,4 @@
     </div>
   </div>
 
-</form>
+{#</form>#}
