--- a/bizopt/BO/templates/becomeCreatorTemplates/template2.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template2.html
@@ -1,12 +1,11 @@
-<form method="POST">
-  
+
 <div class="row">
   <div class="col-md-1">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
   </div>
 
   <div id="main_change" class="col-md-10">
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" name="product_cards" enctype="multipart/form-data">
       {% csrf_token %}
 
       <div class="p-3 py-5">
@@ -28,5 +27,3 @@
     </form>
   </div>
 </div>
-
-</form>
