--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -42,39 +42,35 @@
                         <h4 class="text-right">Ваши задачи</h4>
                     </div>
                     <div class="row">
-
-                        <!-- start of card template -->
-                        <div class="card m-2 p-0" style="width: 18rem;">
-                            <!-- src - фото(ссылка на фото)  alt - оставить дефолтным -->
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" class="card-img-top" alt="task img">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text cuttedText " max-width="100">card text</p>
-                                <a href="#" class="btn btn-primary">перейти</a>
-                                <div class="d-inline-block ml-5">
-                                    <a href="#" class="btn btn-secondary">
-                                        <i class="fa-solid fa-share"></i>
-                                    </a>
-                                    <a href="#" class="btn btn-secondary">
-                                        <i class="fa-solid fa-heart"></i>
-                                    </a>
+                        {% for card in task_cards %}
+                            <!-- start of card template -->
+                            <div class="card m-2 p-0" style="width: 18rem;">
+                                <!-- src - фото(ссылка на фото)  alt - оставить дефолтным -->
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" class="card-img-top" alt="task img">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ card.name }}</h5>
+                                    <p class="card-text cuttedText " max-width="100">{{ card.description }}</p>
+                                    <a href="#" class="btn btn-primary">перейти</a>
+                                    <div class="d-inline-block ml-5">
+                                        <a href="#" class="btn btn-secondary">
+                                            <i class="fa-solid fa-share"></i>
+                                        </a>
+                                        <a href="#" class="btn btn-secondary">
+                                            <i class="fa-solid fa-heart"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="card-footer text-muted text-right">
+                                    2 days ago
                                 </div>
                             </div>
-                            <div class="card-footer text-muted text-right">
-                                2 days ago
-                            </div>
-
-                        </div>
-
-
-                        <!--  -->
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </form>
     </div>
-    </div>
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
-
+</body>
 </html>
 {% endblock %}
