--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -160,7 +160,7 @@
 						</div>
 						{% endif %}
 						{% endif %}
-						<p style="font-size: small;">Забыли пароль? <a href="{% url 'password_reset' %}">востановите
+						<p style="font-size: small;">Забыли пароль? <a href="/restorePassword">востановите
 								его</a></p>
 						<h7>Еще нет аккаунта? <a href="/signin">создай его</a></h7>
 					</div>
