--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -174,16 +174,11 @@
                         <br>
                     </div>
 
-                    {% csrf_token %}
-                    {% if form.errors %}
-                       {% for field in form %}
-                           {% for error in field.errors %}
-                              <div class="alert alert-danger">
-                                   <strong>{{ error|escape }}</strong>
-                              </div>
-                           {% endfor %}
-                       {% endfor %}
-                    {% endif %}
+                    {% csrf_token %} {% if form.errors %} {% for field in form %} {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                    {% endfor %} {% endfor %} {% endif %}
                     <div style="overflow:auto;" id="next-previous">
                         <div style="float:right;">
                             <button type="button" id="prevBtn" onclick="nextPrev(-1)">
@@ -201,11 +196,52 @@
 </body>
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
 <script type='text/Javascript'>
-    let currentTab = 0; document.addEventListener("DOMContentLoaded", function (event) { showTab(currentTab); }); function showTab(n) { let x = document.getElementsByClassName("tab"); x[n].style.display = "block"; if (n === 0) { document.getElementById("prevBtn").style.display
-    = "none"; } else { document.getElementById("prevBtn").style.display = "inline"; } if (n === (x.length - 1)) { document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>'; } else { document.getElementById("nextBtn").innerHTML
-    = '<i class="fa fa-angle-double-right"></i>'; } fixStepIndicator(n) } function nextPrev(n) { let x = document.getElementsByClassName("tab"); x[currentTab].style.display = "none"; currentTab = currentTab + n; if (currentTab === x.length) { document.getElementById('nextBtn').type
-    = "submit" } showTab(currentTab); } function surTab(n) { let x = document.getElementsByClassName("tab"); x[currentTab].style.display = "none"; currentTab = n; showTab(currentTab); } function fixStepIndicator(n) { let i, x = document.getElementsByClassName("step");
-    for (i = 0; i
-    < x.length; i++) { x[i].className=x [i].className.replace( " active", ""); } x[n].className +=" active" ; } </script>
+    let currentTab = 0;
+document.addEventListener("DOMContentLoaded", function(event) {
+    showTab(currentTab);
+});
+
+function showTab(n) {
+    let x = document.getElementsByClassName("tab");
+    x[n].style.display = "block";
+    if (n === 0) {
+        document.getElementById("prevBtn").style.display = "none";
+    } else {
+        document.getElementById("prevBtn").style.display = "inline";
+    }
+    if (n === (x.length - 1)) {
+        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
+    } else {
+        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
+    }
+    fixStepIndicator(n)
+}
+
+function nextPrev(n) {
+    let x = document.getElementsByClassName("tab");
+    x[currentTab].style.display = "none";
+    currentTab = currentTab + n;
+    //if (currentTab === x.length) {
+     //   document.getElementById('nextBtn').type = "submit"
+    // }
+    showTab(currentTab);
+}
+
+function surTab(n) {
+    let x = document.getElementsByClassName("tab");
+    x[currentTab].style.display = "none";
+    currentTab = n;
+    showTab(currentTab);
+}
+
+function fixStepIndicator(n) {
+    let i, x = document.getElementsByClassName("step");
+    for (i = 0; i <
+        x.length; i++) {
+        x[i].className = x[i].className.replace(" active", "");
+    }
+    x[n].className += " active";
+}
+     </script>
 
 </html>
